# four-sided-triangle

./: .gitignore  Cargo.toml  Dockerfile  README.md  RUST_IMPLEMENTATION_COMPLETE.md  analysis_and_recommendations.md  build_rust.sh  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt  run_api.py  setup.py  setup_sprint_testing.py  start.sh  test_dual_model_integration.md  test_dual_model_integration.py  test_multi_model.py  test_sprint_expert.py
app/: main.py
app/api/: README.md  __init__.py  app.py  endpoints.py  interfaces.md
app/config/: README.md  config.py  settings.py  validators.py
app/core/: README.md  autobahn_interface.py  connector.py  dependency_container.py  glycolytic_cycle.py  metacognitive.py  model.py  modeler.py  rust_integration.py  setup_example.py  throttle_detection.py
app/core/stages/: __init__.py  stages.md
app/core/stages/stage0_query_processor/: __init__.py  context_manager.py  intent_classifier.py  (+7 more)
app/examples/: fuzzy_evidence_example.py  specialized_pipeline_example.py
app/interpreter/: README.md  __init__.py  interpreter_service.py  models.py  quality_assessor.py  response_translator.py  router.py
app/orchestrator/: __init__.py  core.py  interfaces.py  metacognitive_orchestrator.py  orchestrator.md  orchestrator.py  orchestrator_service.py  output_evaluator.py  pipeline_stage.py  process_monitor.py  prompt_generator.py  setup_example.py  specialized_orchestrator.py  working_memory.py
app/solver/: __init__.py  dispatcher.py  registry.py
app/solver/adapters/: __init__.py  base_adapter.py  custom_adapter.py  cvxpy_adapter.py  ortools_adapter.py  pulp_adapter.py  scipy_adapter.py
app/turbulance/: __init__.py  compiler.py  orchestrator.py  parser.py
app/utils/: __init__.py  errors.py  helpers.py  llm_client.py  logging.py  utils.py
backend/: run_modeler_api.py
backend/distributed/: README.md  compute_helpers.py  compute_manager.py  modeler_api.py  modeler_api_README.md
docs/: FUZZY_EVIDENCE_IMPLEMENTATION_SUMMARY.md  Gemfile  _config.yml  api-reference.md  architecture.md  contributing.md  core-processing.md  data-models.md  four-sided-triangle.aux  four-sided-triangle.fdb_latexmk  four-sided-triangle.fls  four-sided-triangle.out  four-sided-triangle.tex  frontend-components.md  frontend-development.md  frontend-overview.md  fuzzy-evidence-system.md  getting-started.md  index.md  interpreter.md  model-container.md  models.md  pipeline.md  rust-optimization.md  specialised.md  system.aux  system.fdb_latexmk  system.fls  system.out  system.tex  tasks.md  turbulance-integration.md  turbulance-quick-reference.md
docs/adr/: 0001-module-naming-conventions.md  0002-error-handling-strategy.md  0003-dependency-injection.md  0004-pipeline-stage-design.md  index.md
docs/stages/: domain-knowledge.md  query-processing.md  reasoning-optimization.md  response-comparison.md  response-scoring.md  semantic-atdb.md  solution-generation.md  threshold-verification.md
frontend/: .eslintrc.json  README_frontend.md  package.json  tsconfig.json  workflow.md
frontend/.junie/: guidelines.md
frontend/docs/: plan.md  tasks.md
frontend/public/: manifest.json  sw.js
frontend/src/components/: Desk.js  ErrorBoundary.js  Icons.js  Layout.js  Loader.js  Logo.js  Navbar.js  TurbulanceEditor.js  orchestrator.ts  pipeline.ts
frontend/src/examples/: pipelineExample.ts
frontend/src/pages/: _app.js  about.js  index.js  offline.js
frontend/src/services/: interpreter-backend.service.ts  llm.service.ts  modeler-backend.service.ts  solver-backend.service.ts
frontend/src/types/: interpreter.types.ts  modeler.types.ts  solver.types.ts  userContext.ts
frontend/src/utils/: rateLimiter.js  responsive.js
scripts/: build_rust.sh  setup.py  start.sh
src/: autobahn_bridge.rs  bayesian.rs  error.rs  evidence_network.rs  fuzzy_evidence.rs  lib.rs  memory.rs  metacognitive_optimizer.rs  optimization.rs  quality_assessment.rs  text_processing.rs  throttle_detection.rs  utils.rs
src/turbulance/: annotation.rs  compiler.rs  mod.rs  orchestrator.rs  parser.rs  processor.rs
(+90 files in other folders)
