[package]
name = "four-sided-triangle-core"
version = "0.1.0"
edition = "2021"
description = "High-performance Rust components for Four-Sided Triangle RAG system"
license = "MIT"

[lib]
name = "four_sided_triangle_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core dependencies for Python FFI
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"] }
numpy = "0.20"
ndarray = "0.15"

# Mathematical operations
nalgebra = "0.32"
statrs = "0.16"
rand = "0.8"
rand_distr = "0.4"

# Graph processing and network analysis
petgraph = "0.6"
indexmap = "2.0"

# Fuzzy logic and uncertainty
ordered-float = "4.0"

# Text processing and NLP
regex = "1.10"
unicode-segmentation = "1.10"
stemmer = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async and concurrency
tokio = { version = "1.0", features = ["full"] }
rayon = "1.8"
crossbeam = "0.8"

# HTTP client for Autobahn integration
reqwest = { version = "0.11", features = ["json"] }

# Performance optimization
simd-json = "0.13"
ahash = "0.8"
smallvec = "1.11"

# Memory management
dashmap = "5.5"
parking_lot = "0.12"
once_cell = "1.19"

# Logging
log = "0.4"
env_logger = "0.10"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3 